build: 在base.html中添加静态文件版本号以解决缓存问题

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
             } catch (e) {}
         })();
     </script>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/style.css?version=v0.1.7">
     {% block head %}{% endblock %}
 </head>
 <body class="page page-{{ active_page or 'index' }} {% block body_class %}{% endblock %}">
